--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -23,7 +23,7 @@
        data-event-dominant-color="<%= get_image_dominant_color event %>"
        data-target="event.event"
        id="<%= dom_id event %>">
-    <div data-fixed="true" class="mdc-card__media mdc-card__media--16-9 <%= 'lazy-bgimage' unless json_request  %>" <%= "data-src=#{get_original_image_url(event)}" unless json_request %> style="<%= get_image_style_attr event, preload: json_request %>">
+    <div data-fixed="true" class="mdc-card__media mdc-card__media--16-9 <%= 'lazy-bgimage' unless json_request %>" <%= "data-src=#{get_original_image_url(event)}" unless json_request %> style="<%= get_image_style_attr event, preload: json_request %>">
       <% if current_user %>
         <div class="me-card__like-button" data-action="click->event#like">
           <div data-target="event.like">
@@ -35,15 +35,13 @@
                     aria-pressed="false"
                     style="<%= 'display: inline' if current_user.taste_events_saved?(event.id) %>">
               <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 62 62">
-                  <defs/>
-                  <path fill-rule="evenodd" d="M61.9999 31c0 17.1208-13.8791 30.9999-30.9999 30.9999C13.8792 61.9999 0 48.1208 0 31 0 13.8792 13.8792 0 31 0s30.9999 13.8792 30.9999 31zm-13.6836-7.8711c0 2.9426-2.3932 5.3281-5.3454 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3454 2.3855 5.3454 5.3281zm-23.8208 0c0 2.9426-2.3933 5.3281-5.3455 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3455 2.3855 5.3455 5.3281zm23.0007 16.3239c.0243-.0454 1.6832-3.2152 1.699-3.2458L13.5 36.2266l1.396 3.0497.0034.0067.0079.0156.0205.0401c.0158.0305.0359.0687.0602.1141.0488.0907.1149.2103.1988.3546.1676.2882.4077.6775.7238 1.134.6292.9088 1.5775 2.1099 2.878 3.3139 2.6185 2.4243 6.7324 4.9088 12.4535 4.9088s9.835-2.4845 12.4535-4.9088c1.3005-1.204 2.2488-2.4051 2.878-3.3139.3161-.4565.5562-.8458.7238-1.134.0839-.1443.15-.2639.1988-.3546z" clip-rule="evenodd"/>
+                <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
                 </svg>
               </i>
               <i class="material-icons-sharp mdc-icon-button__icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 62 62">
-                  <defs/>
-                  <path fill-rule="evenodd" d="M61.9999 31c0 17.1208-13.8791 30.9999-30.9999 30.9999C13.8792 61.9999 0 48.1208 0 31 0 13.8792 13.8792 0 31 0s30.9999 13.8792 30.9999 31zm-13.6836-7.8711c0 2.9426-2.3932 5.3281-5.3454 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3454 2.3855 5.3454 5.3281zm-23.8208 0c0 2.9426-2.3933 5.3281-5.3455 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3455 2.3855 5.3455 5.3281zm-6.5704 14.621c-3.032 1.5205-3.0313 1.5219-3.0306 1.5234l.0015.003.0034.0067.0079.0156.0205.0401c.0158.0305.0359.0687.0602.1141.0488.0907.1149.2103.1988.3546.1676.2882.4077.6775.7238 1.134.6292.9088 1.5775 2.1099 2.878 3.3139 2.6185 2.4243 6.7324 4.9088 12.4535 4.9088s9.835-2.4845 12.4535-4.9088c1.3005-1.204 2.2488-2.4051 2.878-3.3139.3161-.4565.5562-.8458.7238-1.134.0839-.1443.15-.2639.1988-.3546a8.407 8.407 0 00.0602-.1141l.0206-.0401.0078-.0156.0034-.0067.0015-.003c.0007-.0015.0015-.0029-3.0306-1.5234-3.032-1.5206-3.0313-1.5219-3.0306-1.5233l.0012-.0025.0023-.0045.0035-.0069.0028-.0056a5.1948 5.1948 0 01-.0971.1739c-.0873.1501-.2322.3869-.4363.6817-.4112.5939-1.0443 1.3964-1.9079 2.1959-1.7095 1.5827-4.2541 3.1054-7.8549 3.1054-3.6008 0-6.1454-1.5227-7.8549-3.1054-.8636-.7995-1.4967-1.602-1.9079-2.1959a10.3959 10.3959 0 01-.4362-.6817 5.039 5.039 0 01-.0867-.1541c-.0072-.0133-.0107-.0201-.0106-.0199l.0029.0057.0035.0069.0023.0045.0012.0025c.0007.0014.0014.0027-3.0306 1.5233z" clip-rule="evenodd"/>
+                <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
                 </svg>
               </i>
             </button>
@@ -73,7 +71,7 @@
     </div>
     <div class="me-card__primary-section">
       <span class="me-card__category"
-          data-target="event.category">
+            data-target="event.category">
           <%= link_to event.categories_primary_name.try(:capitalize), category_events_path(event.categories_primary_name) %>
       </span>
       <span aria-hidden="true"> · </span>
@@ -81,7 +79,7 @@
             data-target="event.date">
         <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
       </span>
-      <span class="me-card__price <%='is-highlight' if (event.details_prices.present? && event.details_prices.min.to_i <= 20) %>">
+      <span class="me-card__price <%= 'is-highlight' if (event.details_prices.present? && event.details_prices.min.to_i <= 20) %>">
           <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %>
       </span>
     </div>
@@ -91,27 +89,26 @@
            title="<%= event.details_name %>">
         <%= link_to limit_name_size(event.details_name), event_path(event) %>
       </div>
-      <%= event.ml_data['personas']['primary'].to_json if Rails.env == 'development' && params[:debug]  %>
+      <%= event.ml_data['personas']['primary'].to_json if Rails.env == 'development' && params[:debug] %>
       <%= event.ml_data['categories']['primary'].to_json if Rails.env == 'development' && params[:debug] %>
     </div>
     <div class="me-card__tertiary-section">
       <% if display_place %>
-        <div class="me-card__place"
+        <div class="me-card__place me-chip mdc-chip"
              data-target="event.place"
              title="<%= event.place_details_name %>">
+          <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4 0C1.78857 0 0 1.76836 0 3.9548C0 6.31073 2.52571 9.55932 3.56571 10.7966C3.79429 11.0678 4.21143 11.0678 4.44 10.7966C5.47429 9.55932 8 6.31073 8 3.9548C8 1.76836 6.21143 0 4 0ZM4 5.36723C3.21143 5.36723 2.57143 4.73446 2.57143 3.9548C2.57143 3.17514 3.21143 2.54237 4 2.54237C4.78857 2.54237 5.42857 3.17514 5.42857 3.9548C5.42857 4.73446 4.78857 5.36723 4 5.36723Z" fill="#4B4B4B"/>
+          </svg>
           <%= link_to limit_place_name_size(event.place_details_name), place_path(event.place) %>
         </div>
       <% end %>
-    </div>
-    <% if display_similar && event.similar_data.empty? == false %>
-      <div class="me-card__similar"
-           data-action="click->event#showSimilar"
-           data-target="event.similar"
-           title="Mostrar eventos parecidos">
-        <button class="mdc-button mdc-button--dense">
-          <span class="mdc-button__label">
-            Ver similares
-          </span>
+      <% if display_similar && event.similar_data.empty? == false %>
+        <div class="me-card__similar me-chip mdc-chip"
+             data-action="click->event#showSimilar"
+             data-target="event.similar"
+             title="Mostrar eventos parecidos">
+          Ver similares
           <i class="me-card__expand-more material-icons">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
               <path opacity=".87" fill="none" d="M24 24H0V0h24v24z"/>
@@ -119,10 +116,14 @@
             </svg>
           </i>
           <i class="me-card__loading material-icons">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+              <path fill="none" d="M0 0h24v24H0V0z"/>
+              <path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+            </svg>
           </i>
-        </button>
-      </div>
-    <% end %>
+
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
