--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -46,7 +46,7 @@ $font-tertiary-color: #7D7D7D; // transparentize($font-secondary-color, 0.20);
 $media-box-shadow-small: 0 0 3px #00000038;
 $media-box-shadow-large: 0 0 6px #00000038;
 $media-border-radius: 6px;
-$media-border-width: 0;
+$media-border-width: 1px;
 
 $save-icon-fill: $font-secondary-color;
 $save-icon-fill-hover: lighten($brand-color, 5%);
