--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -3,10 +3,45 @@
 
 .me-chip {
 
-  .me-card & {
-    //background: none;
-    //border: 1px solid $border-color;
+  .me-card__primary-section & {
+    background: $surface-color;
+    color: $font-secondary-color;
+    box-shadow: 0 1px 5px #0000003b;
+    font-size: 10px;
+    margin: 0 6px 0 0;
+    font-weight: 500;
+    padding: 0 10px;
+    height: auto;
+
+    &.me-card__date {
+      box-shadow: none;
+    }
+
+    &.hoje {
+      font-weight: 600;
+      background: $brand-color;
+      color: $surface-color;
+      padding: 4px 10px;
+      font-size: 11px;
+    }
+
+    &.amanha {
+      font-weight: 600;
+      //background: lighten($brand-color, 63%);
+      color: $brand-color-aa;
+      padding: 4px 10px;
+      font-size: 11px;
+    }
+  }
+
+  .me-similar__events & {
+    font-size: 9px;
+    font-weight: 500;
+  }
+
+  .me-card__tertiary-section & {
     margin: 0 6px 6px 0;
+    font-size: 11px;
   }
 
   &.mdc-chip {
