--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -58,14 +58,14 @@
     }
 
     & .mdc-chip {
-      font-weight: 600;
+      font-weight: 500;
       font-size: 10px;
       height: auto;
       line-height: 1em;
       padding: 10px 8px;
       margin: 3px;
       font-family: $font-secondary-family;
-      //border-radius: 6px;
+      border-radius: 3px;
       color: $font-tertiary-color;
       background-color: $background-color;
       border: $chip-border-size solid $border-color;
