--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -24,6 +24,20 @@
        data-target="event.event"
        id="<%= dom_id event %>">
     <div data-fixed="true" class="mdc-card__media mdc-card__media--16-9 <%= 'lazy-bgimage' unless json_request %>" <%= "data-src=#{get_original_image_url(event)}" unless json_request %> style="<%= get_image_style_attr event, preload: json_request %>">
+      <div class="me-card__primary-section">
+        <!--      <span class="me-chip mdc-chip me-card__category"-->
+        <!--            data-target="event.category">-->
+        <%#= link_to event.categories_primary_name.try(:capitalize), category_events_path(event.categories_primary_name) %>
+        <!--      </span>-->
+        <!--        <span aria-hidden="true"> · </span>-->
+        <span class="me-chip mdc-chip me-card__date <%= event.day_of_week['decorator'].parameterize %>"
+              data-target="event.date">
+        <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
+      </span>
+        <span class="me-card__price <%= 'is-highlight' if (event.details_prices.present? && event.details_prices.min.to_i <= 20) %>">
+          <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %>
+      </span>
+      </div>
       <% if current_user %>
         <div class="me-card__like-button" data-action="click->event#like">
           <div data-target="event.like">
@@ -69,20 +83,15 @@
         </div>
       <% end %>
     </div>
-    <div class="me-card__primary-section">
-      <span class="me-card__category"
-            data-target="event.category">
-          <%= link_to event.categories_primary_name.try(:capitalize), category_events_path(event.categories_primary_name) %>
-      </span>
-      <span aria-hidden="true"> · </span>
-      <span class="me-card__date <%= 'is-highlight' if event.day_of_week['decorator'] == 'hoje' %>"
-            data-target="event.date">
-        <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
-      </span>
-      <span class="me-card__price <%= 'is-highlight' if (event.details_prices.present? && event.details_prices.min.to_i <= 20) %>">
-          <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %>
-      </span>
-    </div>
+    <% unless event_type == 'similar'%>
+      <div class="me-card__quartenary-section">
+        <div class="me-card__category"
+              data-target="event.category">
+          <%= link_to "##{event.categories_primary_name.try(:capitalize)}", category_events_path(event.categories_primary_name) %>
+          <%= event.organizers.map {|organizer| link_to(to_hashtag(organizer.details_name), organizer_path(organizer)) }.join(" ").html_safe %>
+        </div>
+      </div>
+    <% end %>
     <div class="me-card__secondary-section">
       <div class="me-card__title"
            data-target="event.name"
