--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -99,8 +99,8 @@
                 identifier:  'user-suggestions',
                 collection:  @items[:user_suggestions],
                 title:       {
-                    principal: "Indicados para #{current_user.first_name}",
-                    secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
+                    principal: "Escolhidos a dedo para #{current_user.first_name}",
+                    secondary: "Explore os eventos com alta recomendação para seu gosto pessoal"
                 },
                 type:        :large,
                 filters:     {
