--- a/web/app/assets/stylesheets/components/me-bottom-navigation.scss
+++ b/web/app/assets/stylesheets/components/me-bottom-navigation.scss
@@ -4,8 +4,8 @@
   position: fixed;
   bottom: 0;
   z-index: 5;
-  background: $surface-color;
-  box-shadow: 0px 0px 3px #00000030;
+  background: darken($surface-color, 1%);
+  box-shadow: 0 0 3px #00000030;
   @include desktop-only {
     display: none;
   }
