--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -8,7 +8,7 @@
     color: $font-tertiary-color;
     box-shadow: 0 1px 5px #0000003b;
     font-size: 10px;
-    margin: 0 6px 0 0;
+    margin: 0 6px 6px 0;
     font-weight: 500;
     padding: 0 10px;
     height: auto;
