--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,4 +1,5 @@
 @import "welcome/media-queries";
+@import "mixins";
 
 $brand-color: #03994C;
 $brand-color-aa: darken(#03994C, 5%);
@@ -119,3 +120,8 @@ $maybe-color: $font-tertiary-color;
     transform: translateY(4px);
   }
 }
+
+.is-horizontal-scrollable {
+  @include add-horizontal-scroll-wrapper;
+  @include no-scroll-bar
+ }
