--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -11,8 +11,8 @@
   border-radius: 10px;
   @include mdc-layout-grid-media-query_("phone") {
     width: auto;
-    padding: 6px 0;
-    margin: 0 12px 35px 12px;
+    padding: 0;
+    margin: 6px 12px 35px 12px;
     .me-page--profile__section & {
       grid-column: 8 span;
       margin: 0 0 35px 0;
