--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -191,7 +191,14 @@
 
       <div class="me-card__topics">
         <%#= render partial: 'components/follow/follow-chip-set', locals: { user: current_user, chips: @event.categories.sort, event_id: @event.id, type: 'categories' } %>
-        <%= render partial: 'components/follow/follow', locals: {user: current_user, chips: @event.organizers.sort, event_id: @event.id, type: 'organizers'} %>
+        <%= render partial: 'components/follow/follow', locals: {
+            data: {
+                user: current_user,
+                chips: @event.organizers.sort,
+                event_id: @event.id,
+                type: 'organizers'
+            }
+        } %>
       </div>
 
 
