--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -1,4 +1,6 @@
-<div class="me-feed me-page--search me-page__section">
+<div class="me-page--search me-page__section">
+
+  <%= notice %>
 
   <% unless @events_found&.suggestions.blank? %>
     <section class="me-feed__section" style="margin: 0 auto 25px auto;">
