Fix in populate facebook and datetimes scrape

--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -174,7 +174,7 @@
           <button class="me-button me-button--transparent me-button--with-icon-in-right mdc-button"
                   data-target="section.loadMoreButton"
                   data-action="click->section#loadMore">
-            <span class="me-button__label">Mostrais mais</span>
+            <span class="me-button__label">Mostrar mais</span>
           </button>
         <% end %>
       </div>
