Adjust date in card component

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,6 +1,8 @@
 @import "welcome/media-queries";
 @import "mixins";
 
+$main-content-width: 1040px;
+
 $brand-color: #03994C;
 $brand-color-aa: darken(#03994C, 5%);
 $brand-color-aaa: darken(#03994C, 10%);
