--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -22,6 +22,23 @@ $description-color: $font-secondary-color;
     display: contents;
   }
 
+  &__date {
+    .me-card--feed & {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &__date-distance-in-words {
+    color: lighten($font-tertiary-color, 10%);
+    font-size: 9px;
+    line-height: 1;
+    padding: 2px 0 0 0;
+    @include mobile-only {
+      font-size: 8px;
+    }
+  }
+
   & .mdc-card__title {
     color: $name-color;
     line-height: 18px;
