--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -12,8 +12,10 @@
     font-size: 10px;
     margin: 0 6px 6px 0;
     font-weight: 500;
-    padding: 0 10px;
+    //padding: 0 10px;
     height: auto;
+    line-height: 1;
+    padding: 6px 8px;
 
     &.me-card__date {
       box-shadow: none;
