--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -63,7 +63,10 @@
                        data-target="saves-events.overlay"></div>
                 </div>
                 <div class="me-card__date <%= 'is-highlight' if ['hoje', 'amanhã'].include?(event.day_of_week['decorator']) %>" data-target="saves-events.date">
-                  <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
+                  <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %> <br>
+                  <span class="me-card__date-distance-in-words">
+                    <%= "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
+                  </span>
                 </div>
               </a>
             </div>
